--- a/manageroom/src/components/css/main.css
+++ b/manageroom/src/components/css/main.css
@@ -5,13 +5,33 @@ section{
     max-width: 1200px;
     margin: 0 auto;
 }
+h2{
+    border-bottom: solid 3px black;
+    height: auto;
+    margin: 10px;
+    font-size: 1.2rem;
+}
 .box-Item{
     height: auto;
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     border: 1px solid black;
     text-align: center;
     margin: 2px;
-    background-color: aquamarine;
+    background-color: white;
+}
+.ful{
+    background-color: orange;
+}
+.nothing{
+    background-color: whitesmoke;
+    width: 50px;
+    height: 50px;
+}
+
+.seatrender{
+    height: 300px;
+    width: 1300px;
+    overflow: scroll;
 }
