横スクロール、縦スクロールができるようになった

--- a/manageroom/src/components/css/main.css
+++ b/manageroom/src/components/css/main.css
@@ -31,7 +31,11 @@ h2{
 }
 
 .seatrender{
-    height: 300px;
-    width: 1300px;
     overflow: scroll;
+    overflow-x: scroll;
+}
+
+.item{
+    height: 300px;
+    width: 1200px;
 }
