--- a/manageroom/src/components/css/joinStyle.css
+++ b/manageroom/src/components/css/joinStyle.css
@@ -1,12 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    height: 96%;
-  }
-  .card{
-    position: relative;
-  
-  }
+
+ .card{
+  box-shadow: 0px 5px 100px 27px #12b5a2;
+border-radius: 44px;
+ }
   .content{
     position: absolute;
     text-align: center;
@@ -40,7 +36,6 @@
   }
   a{
     text-decoration: none;
-    
   }
   input{
     width: 210px;
@@ -48,8 +43,6 @@
     border-radius: 12px;
     padding: 12px;
     border: 0.1rem solid;
-
-    
   }
   .sectionline{
     padding: 12px 36px 0px 36px;
@@ -86,5 +79,6 @@
   .qrimage img{
     margin: 0 auto;
     padding: 25px;
+    height: 170px;
   }
   
