--- a/manageroom/src/components/css/main.css
+++ b/manageroom/src/components/css/main.css
@@ -33,8 +33,6 @@ section{
 }
 .nothing{
     background-color: whitesmoke;
-    width: 50px;
-    height: 50px;
 }
 
 .seatrender{
@@ -44,6 +42,6 @@ section{
 }
 
 .item{
-    height: 300px;
+    height: 75vh;
     width: 1600px;
 }
