--- a/manageroom/src/common.css
+++ b/manageroom/src/common.css
@@ -31,7 +31,7 @@ img {
 }
 
 .header-inner {
-    max-width: 1200px;
+    max-width: 100%;
     height: 110px;
     margin-left: auto;
     margin-right: auto;
@@ -121,7 +121,7 @@ img {
         display: block;
         width: 44px;
         height: 34px;
-        background-image: url(img/hunbuger-botton.png);
+        background-image: url(hunbuger-botton.png);
         background-size: 50%;
         background-position: center;
         background-repeat: no-repeat;
@@ -146,7 +146,7 @@ img {
 
 .first-view {
     height: calc(100vh - 110px);
-    background-image: url(img/自習室.jpg);
+    background-image: url(自習室.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -211,7 +211,7 @@ img {
 @media (max-width: 800px) {
     .first-view {
         height: calc(100vh - 50px);
-        background-image: url(img/自習室.jpg);
+        background-image: url(自習室.jpg);
         align-items: flex-start;
     }
     
